--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 }
 
 #board {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     outline: 5px black solid;
@@ -50,4 +51,17 @@ html {
 .possibleMove {
 
     background: rgba(222, 247, 2, 0.6);
+}
+
+#promo {
+    position: absolute; 
+    background-color: #fff;
+}
+
+#promo > div {
+     background-color: rgba(222, 247, 2, 0.6);
+}
+
+#promo > div:hover {
+    background-color: rgb(215, 235, 243);
 }
