--- a/style.css
+++ b/style.css
@@ -22,12 +22,31 @@ html {
 
 #board {
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-rows: repeat(8, 1fr);
+    grid-template-columns: repeat(8, 1fr);
     width: 80vh;
     height: 80vh;
 }
+@media (max-width: 900px){
+    #board {
+        transform: scale(0.8);
+    }
+}
 
+@media (max-width: 750px){
+    #board {
+        transform: scale(0.7);
+    }
+}
+
+@media (max-width: 460px){
+    #board {
+        transform: scale(0.6);
+    }
+}
 .square {
     width: 10vh;
     height: 10vh;
